--- a/style.css
+++ b/style.css
@@ -125,11 +125,21 @@ footer a, footer p {
     }
 
     .hasil .male h2  {
-        margin-left: 15px;
+        font-size: 16px;
+        margin-left: 27px;
     }
     
     .hasil .female h2 {
-        margin-left: 7px;
+        font-size: 16px;
+        margin-left: 20px;
+    }
+
+    .tittle {
+        font-size: 18px;
+    }
+
+    .container label {
+        font-size: 14px;
     }
 
 }
